--- a/html/mso/index.html
+++ b/html/mso/index.html
@@ -28,6 +28,10 @@
 <dd>
 <section class="desc"></section>
 </dd>
+<dt><code class="name"><a title="mso.rigol" href="rigol.html">mso.rigol</a></code></dt>
+<dd>
+<section class="desc"></section>
+</dd>
 <dt><code class="name"><a title="mso.system" href="system.html">mso.system</a></code></dt>
 <dd>
 <section class="desc"></section>
@@ -54,6 +58,7 @@
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
 <li><code><a title="mso.bus" href="bus.html">mso.bus</a></code></li>
+<li><code><a title="mso.rigol" href="rigol.html">mso.rigol</a></code></li>
 <li><code><a title="mso.system" href="system.html">mso.system</a></code></li>
 <li><code><a title="mso.triggers" href="triggers.html">mso.triggers</a></code></li>
 </ul>
