--- a/html/mso/rigol.html
+++ b/html/mso/rigol.html
@@ -136,7 +136,7 @@ class RigolMSO():
             busNum (int): line 1|2|3|4
             busType (str): parallel|rs232|spi|iic|iis|lin|can|flexray|m1553
         Returns:
-            obj: bus type object
+            obj: bus subclass object
         &#34;&#34;&#34;
         self.mainBus = Bus(self.instr)
         try:
@@ -275,7 +275,7 @@ class RigolMSO():
             busNum (int): line 1|2|3|4
             busType (str): parallel|rs232|spi|iic|iis|lin|can|flexray|m1553
         Returns:
-            obj: bus type object
+            obj: bus subclass object
         &#34;&#34;&#34;
         self.mainBus = Bus(self.instr)
         try:
@@ -379,7 +379,7 @@ str: selected trigger type</p></section>
 <h2 id="returns">Returns</h2>
 <dl>
 <dt><strong><code>obj</code></strong></dt>
-<dd>bus type object</dd>
+<dd>bus subclass object</dd>
 </dl></section>
 <details class="source">
 <summary>Source code</summary>
@@ -389,7 +389,7 @@ str: selected trigger type</p></section>
         busNum (int): line 1|2|3|4
         busType (str): parallel|rs232|spi|iic|iis|lin|can|flexray|m1553
     Returns:
-        obj: bus type object
+        obj: bus subclass object
     &#34;&#34;&#34;
     self.mainBus = Bus(self.instr)
     try:
