--- a/html/mso/system.html
+++ b/html/mso/system.html
@@ -33,7 +33,7 @@ class System():
         Args:
             instr (obj): vx11 instance object
         Returns:
-            object: rigol object
+            object: system object
     &#34;&#34;&#34;       
     def __init__(self, instr):
         self.instr = instr
@@ -78,7 +78,7 @@ class System():
 <h2 id="returns">Returns</h2>
 <dl>
 <dt><strong><code>object</code></strong></dt>
-<dd>rigol object</dd>
+<dd>system object</dd>
 </dl></section>
 <details class="source">
 <summary>Source code</summary>
@@ -87,7 +87,7 @@ class System():
         Args:
             instr (obj): vx11 instance object
         Returns:
-            object: rigol object
+            object: system object
     &#34;&#34;&#34;       
     def __init__(self, instr):
         self.instr = instr
